# pyrgos

./: Cargo.toml  LICENSE  README.md
.github/workflows/: tauri_build.yml
pygros-gui/: package.json
pygros-gui/src/: App.svelte
pygros-gui/src-tauri/: Cargo.toml  tauri.conf.json
pygros-gui/src-tauri/src/: main.rs
pygros-gui/src-tauri/src/api/: client.rs  fix_fs.rs
pygros-gui/src/api/: client.ts
pygros-gui/src/lib/: ClientButton.svelte  Installer.svelte  InstallerButton.svelte  Menu.svelte  Navbar.svelte  PlayCogs.svelte
pygros-gui/src/state/: appState.ts  tagResponse.ts  tfDirs.ts  version.ts
pygros-gui/src/stores/: appStore.ts
pyrgos-gui/: package.json
pyrgos-gui/src/: App.svelte  styles.css
pyrgos-gui/src-tauri/: Cargo.toml  tauri.conf.json
pyrgos-gui/src-tauri/icons/: icon.icns
pyrgos-gui/src-tauri/src/api/: fix_fs.rs  mod.rs  process.rs
pyrgos-gui/src/api/: client.ts
pyrgos-gui/src/lib/: Button.svelte  ClientButton.svelte  ConfirmationDialog.svelte  Fade.svelte  InstallerButton.svelte  InstancePopup.svelte  Menu.svelte  Navbar.svelte  SubButton.svelte
pyrgos-gui/src/state/: appState.ts  route.ts  tagResponse.ts
pyrgos-gui/src/stores/: appStore.ts
