[workspace]
members = [
    "pygros-gui/src-tauri"
]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
panic = "abort" 
codegen-units = 1 
lto = true 
opt-level = "s"
strip = true 