[package]
name = "pyrgos-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "os-all", "http-request", "path-all", "fs-all", "dialog-open", "dialog-confirm", "process-exit", "dialog-ask", "dialog-save", "shell-open"] }
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opener = { version = "0.6.1", features = ["reveal"] }
zip = "0.6"
async-process = "1.7.0"
futures-lite = "1.13.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
